--- a/css/style.css
+++ b/css/style.css
@@ -28,3 +28,157 @@ a:hover{
     color: white;
     text-decoration: none;
 }
+
+h2, h3, h4{
+    color: white;
+}
+
+h2{
+    margin-bottom: 40px;
+}
+
+h4{
+    margin-bottom: 20px;
+}
+
+h3,h6{
+    margin-bottom: 10px;
+}
+
+.pull{
+    margin-bottom: 10px;
+}
+
+.push{
+    margin-bottom: 40px;
+}
+
+/* ----CONTAINER ASIDE & CORPSE---- */
+.wrapper-top{
+    width: 100%;
+    height: calc(100vh - 150px);
+    display: flex;
+}
+/* ----ASIDE & SIDEBAR---- */
+aside{
+    width: 250px;
+    max-height: 100%;
+    background-color: #000000;
+    padding: 0 20px;
+    overflow: hidden;
+}
+
+.sidebar-top{
+    height: calc(100% - 80px);
+    min-height: 400px;
+    display: flex;
+    flex-direction: column;
+
+}
+
+/* ----LOGO---- */
+.logo{
+    min-height: 150px;
+    display: flex;
+}
+
+.logo img{
+    width: 90%;
+    object-fit: contain;
+}
+
+.navigation{
+    margin-bottom: 20px;
+}
+
+.navigation a{
+    line-height: 30px;
+    height: 30px;
+}
+
+.navigation a.icon::before{
+    content: '';
+    display: inline-block;
+    height: 30px;
+    width: 30px;
+    vertical-align: middle;
+    margin-right:5px ;
+}
+
+.navigation a.home::before{
+    background-image: url('../img/home.svg');
+}
+
+.navigation a.search::before{
+    background-image: url('../img/search.svg');
+}
+
+.navigation a.library::before{
+    background-image: url('../img/libreria.svg');
+}
+
+/* ----PLAYLIST--- */
+.play-title h4{
+    text-transform: uppercase;
+}
+
+.add{
+    display: inline-block;
+    width: 60px;
+    height: 60px;
+    background-color: gray;
+    color: black;
+    text-align: center;
+    line-height: 60px;
+    font-size: 60px;
+    margin-right: 10px;
+}
+
+ .add-text{
+    display: inline-block;
+    height: 60px;
+    line-height: 60px;
+}
+
+.play-title >  a:hover .add{
+    background-color: white;
+}
+
+.playlist{
+    min-height: 30px;
+    overflow-y: auto;
+}
+
+.playlist li{
+    margin-top: 10px;
+}
+
+.sidebar-user{
+    height: 100%;
+}
+
+.sidebar-user hr{
+    margin:10px 0;
+}
+
+.flex{
+    display: flex;
+    align-items: center;
+}
+.user{
+    height: 30px;
+    width: 30px;
+    background-color: gray;
+    border-radius: 100%;
+    margin-right: 10px;
+    overflow: hidden;
+}
+
+.user > img{
+    width: 100%;
+    object-fit: cover;
+}
+.user-name{
+    flex:1;
+    line-height: 30px;
+}
