--- a/css/style.css
+++ b/css/style.css
@@ -246,3 +246,55 @@ nav > a:not(nav > a:last-child) {
     background-color: yellowgreen;
 }
     
+/* ----MAIN'S SECTIONS---- */
+section{
+    padding:50px 20px;
+}
+
+.flex-row{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.flex-row > .box-song{
+    padding-right: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.box-song{
+    width: calc(100% / 6);
+}
+
+.box-song img{
+    width: 100%;
+    object-fit: cover;
+    margin-bottom: 20px;
+}
+
+.box-img:hover .play{
+    display: block;
+}
+
+.box-img:hover img{
+    filter: opacity(.5);
+}
+
+.box-img{
+    position: relative;
+}
+
+.play{
+    position: absolute;
+    top: calc(50% - 20px);
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 60px;
+    color: white;
+    display: none;
+}
+
+#rank > .flex-row > .box-song > img{
+    border-radius: 100%;
+}
