--- a/css/style.css
+++ b/css/style.css
@@ -298,3 +298,26 @@ section{
 #rank > .flex-row > .box-song > img{
     border-radius: 100%;
 }
+
+/* ----FOOTER PANEL CONTROL---- */
+footer{
+    height: 150px;
+    background-color: #282828;
+    display: flex;
+    font-size: 12px;
+}
+
+.panel-lt, .panel-rt{
+    max-width: calc(100% / 3);
+    width: 250px;
+    display: flex;
+    align-items: center;
+}
+
+.panel-ct{
+    min-width: calc(100% - 500px);
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
