--- a/css/style.css
+++ b/css/style.css
@@ -321,3 +321,40 @@ footer{
     flex-direction: column;
     align-items: center;
 }
+
+/* ----LEFT PANEL---- */
+.cover {
+    width: 100%;
+    height: 70%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.cover img{
+    height: 60%;
+    object-fit: cover;
+}
+
+.cover a:hover{
+    text-decoration: underline;
+}
+
+.song-name{
+    display: flex;
+    flex-direction: column;
+    margin-left: 5px;
+}
+
+.action-song{
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.song-name h4, .song-name p{
+    margin:0;
+}
+.cover i{
+    font-size: 20px;
+}
