[UPD] create max width 575px

--- a/css/style.css
+++ b/css/style.css
@@ -466,3 +466,87 @@ footer{
     }
 
 }
+
+@media only screen and (max-width:575px){
+    body{
+        font-size: 12px;
+    }
+    
+    aside{
+        width: 50px;
+        padding: 0 5px;
+    }
+
+    .mobile-hide{
+        display: none;
+    }
+
+    .mobile-show{
+        display: block;
+    }
+
+    .logo{
+        height: auto;
+    }
+
+    .logo img{
+        width: 100%;
+    }
+
+    .navigation{
+        text-align: center;
+    }
+    .sidebar-user{
+        text-align: center;
+    }
+
+    .user{
+        margin:20px 0 0;
+    }
+    .sidebar-user > .flex-row{
+        justify-content: center;
+
+    }
+
+    header{
+        width: calc(100% - 50px);
+    }
+
+    .cover img{
+        height: 40%;
+        object-fit: cover;
+    }
+
+    .song-cmd i:not(.fa-play-circle){
+        font-size: 15px;
+        margin:2px
+    }
+    
+    .song-cmd i.fa-play-circle{
+        font-size: 25px;
+        margin: 5px;
+    }
+    
+    .song-cmd, .song-bar{
+        width: 100%;
+    }
+
+    .cover img{
+        height: 40%;
+    }
+
+    .song-name{
+        padding-right: 10px;
+    }
+
+    .app-cmd > i{
+        font-size: 12px;
+        margin-right: 5px;
+    }
+    
+    .range{
+        width: 100%;
+        margin: 0 5px;
+    }
+    
+}
